# cmake-test2

./: .gitignore  CMakeLists.txt
src/: main.c
